# GlareDetection

./: README
Report_I/: DetectionPickedUpPartWrtGripper.md  Perception.md
Report_II/: CodeStructure.md  ReadMe.md  Report_II.md
Report_II/include/: Ellipse.h  Image.h  MatLib.h
Report_II/src/: Ellipse.c  Image.c  MatLib.c  main.c
Report_III/: Report_III.md
Report_IV/: CMakeLists.txt  CodeStructure.md  Report_IV.md
Report_IV/include/: Ellipse.h  Image.h  MatLib.h  Queue.h
Report_IV/src/: Ellipse.c  Image.c  MatLib.c  Queue.c  main.c
